--- a/DataManage/packages.config
+++ b/DataManage/packages.config
@@ -10,4 +10,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net472" />
+  <package id="WpfAnimatedGif" version="2.0.2" targetFramework="net472" />
 </packages>
