新增单晶体页面

--- a/DataManage/DataManage.csproj
+++ b/DataManage/DataManage.csproj
@@ -116,6 +116,7 @@
     <Compile Include="NotificationWindow.xaml.cs">
       <DependentUpon>NotificationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SingleData.cs" />
     <Compile Include="UpdateData.xaml.cs">
       <DependentUpon>UpdateData.xaml</DependentUpon>
     </Compile>
