--- a/DataManage/DataManage.csproj
+++ b/DataManage/DataManage.csproj
@@ -112,6 +112,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddMultiData.xaml.cs">
+      <DependentUpon>AddMultiData.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Employee.cs" />
     <Compile Include="NotificationWindow.xaml.cs">
       <DependentUpon>NotificationWindow.xaml</DependentUpon>
@@ -120,6 +123,10 @@
     <Compile Include="UpdateData.xaml.cs">
       <DependentUpon>UpdateData.xaml</DependentUpon>
     </Compile>
+    <Page Include="AddMultiData.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="AddData.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
