--- a/DataManage/DataManage.csproj
+++ b/DataManage/DataManage.csproj
@@ -123,6 +123,9 @@
       <DependentUpon>NotificationWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="SingleData.cs" />
+    <Compile Include="UpdateSingleData.xaml.cs">
+      <DependentUpon>UpdateSingleData.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UpdateMutiData.xaml.cs">
       <DependentUpon>UpdateMutiData.xaml</DependentUpon>
     </Compile>
@@ -160,6 +163,10 @@
     <Page Include="NotificationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UpdateSingleData.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UpdateMutiData.xaml">
       <Generator>MSBuild:Compile</Generator>
